--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,11 @@
 * {
 		box-sizing: border-box;
     font-family: 'Lato', sans-serif;
+		font-size: medium;
+		font-weight: 400;
+		cursor: pointer;
+		letter-spacing: 0.8px;
     padding: 0px;
     margin: 0px;
+		-webkit-font-smoothing: antialiased;
   }
