--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -52,3 +52,57 @@
     height: 6px;
   }
 }
+
+.check-box-app {
+	&__box {
+		display: none;
+	}
+
+	&__label {
+		&::before {
+			content:'';
+			background:transparent;
+			border: 1px solid $border-grey;
+			border-radius: 4px;
+			display: inline-block;
+			height: 20px;
+			width: 20px;
+		}
+	}
+
+	&__box:checked + &__label:before {
+		content: '';
+		background-color: $green;
+		background-image: url('../../assets/icons/check.svg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: auto;
+		border: 1px solid $green;
+	}
+}
+
+.radio-btn-app {
+	&__radio {
+		display: none;
+	}
+
+	&__label {
+		&::before {
+			content:'';
+			background:transparent;
+			border: 1px solid $border-grey;
+			border-radius: 50%;
+			display: inline-block;
+			height: 20px;
+			width: 20px;
+		}
+	}
+
+	&__radio:checked + &__label:before {
+		background-image: url('../../assets/icons/circle.svg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: auto;
+		border: 1px solid $green;
+	}
+}
