--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,7 @@
 * {
 		box-sizing: border-box;
     font-family: 'Lato', sans-serif;
-		font-size: medium;
+		font-size: $medium;
 		font-weight: 400;
 		cursor: pointer;
     padding: 0px;
