--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -8,6 +8,7 @@ $green: #43B748;
 $border-grey: #C5CBE0;
 $medium-purple: #6F7DFF;
 $light-blue:#E4E8F7;
+$medium-white: #F7F8FC;
 
 //sizes
 $small10: 10px;
