feat(MAQ): maquetacion formulario mobile

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -3,8 +3,10 @@
 	border: none;
 	border-radius: 8px;
 	color: $white;
+	cursor: pointer;
 	padding: 20px 32px;
 	font-weight: 700;
 	letter-spacing: 0.8px;
 	text-transform: uppercase;
+	width: 100%;
 }
