--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,8 +3,11 @@
     font-family: 'Lato', sans-serif;
 		font-size: $medium;
 		font-weight: 400;
-		cursor: pointer;
     padding: 0px;
     margin: 0px;
 		-webkit-font-smoothing: antialiased;
   }
+
+	.mb-16 {
+		margin-bottom: 16px;
+	} 
