--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,3 +6,4 @@
 @import './components/header';
 @import './components/banner';
 @import './components/home-form';
+@import './components/auto-data-step';
