--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,5 @@
 @import './components/banner';
 @import './components/home-form';
 @import './components/auto-data-step';
+@import './components/auto-data-form';
+@import './components/counter-app';
