feat(MAQ): maquetacion seccion cobertura

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,4 @@
 @import './components/auto-data-step';
 @import './components/auto-data-form';
 @import './components/counter-app';
+@import './components/arm-plan-header';
