feat(MAQ): maquetacion agrega/quita cobertura

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,6 @@
 @import './components/auto-data-form';
 @import './components/counter-app';
 @import './components/arm-plan-header';
+@import './components/arm-plan-offon';
+@import './components/arm-plan-tab';
+@import './components/switch';
