feat(MAQ): maquetacion pago

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,3 +13,4 @@
 @import './components/arm-plan-offon';
 @import './components/arm-plan-tab';
 @import './components/switch';
+@import './components/arm-plan-total';
