--- a/src/styles/components/_switch.scss
+++ b/src/styles/components/_switch.scss
@@ -24,6 +24,7 @@
 		&::before {
 			background-color: $white;
 			bottom: 1.5px;
+			box-shadow: 0px 2px 2px rgba(163, 171, 204, 0.3), 0px 2px 1px rgba(163, 171, 204, 0.06);
 			content: "";
 			height: 28px;
 			left: 1.5px;
