feat(INT): implementacion de rutas publica

--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -22,6 +22,7 @@
 
   &__select {
 		appearance: none;
+		background-color: $white;
 		background-position: right center;
 		background-repeat: no-repeat;
 		border: 1px solid $border-grey;
