feat(INT):realizar validaciones

--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -12,6 +12,11 @@
 		color: $light-grey;
 		font-size: $medium16;
 	}
+
+	&__has-error {
+		color: $rimac-red;
+		font-size: $small10;
+	}
 }
 
 .content-select {
