--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,4 @@
 @import './components/arm-plan-tab';
 @import './components/switch';
 @import './components/arm-plan-total';
+@import './components/welcome-banner';
