--- a/src/styles/components/_welcome-banner.scss
+++ b/src/styles/components/_welcome-banner.scss
@@ -25,7 +25,12 @@
 	&__message {
 		color: $medium-grey;
 		font-size: $medium16;
+		font-family: 'Roboto', sans-serif;
 		line-height: $large28;
 		margin: 24px 0 40px 0;
+
+		&--email {
+			font-weight: 400;
+		}
 	}
 }
