--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,3 +15,4 @@
 @import './components/switch';
 @import './components/arm-plan-total';
 @import './components/welcome-banner';
+@import './components/footer';
