--- a/src/styles/components/_arm-plan-tab.scss
+++ b/src/styles/components/_arm-plan-tab.scss
@@ -15,6 +15,11 @@
 		padding: 24px 14px;
 		text-align: center;
 		text-transform: uppercase;
+
+		&--active {
+			border-bottom: 2px solid $rimac-red;
+			color: $rimac-red;
+		}
 	}
 
 	&__content {
@@ -48,6 +53,10 @@
 			color: $medium-grey;
 			font-family: 'Roboto', sans-serif;
 			line-height: $large;
+
+			&.not-show {
+				display: none;
+			}
 		}
 
 		&__btn {
@@ -61,6 +70,10 @@
 			font-size: 10px;
 			font-weight: 700;
 			margin-right: 10px;
+
+			&.down {
+				color: $light-grey;
+			}
 		}
 
 		&__content-text {
