feat(INT): limpiar store cuando va otra vez al login y correccion de estilos

--- a/src/styles/components/_welcome-banner.scss
+++ b/src/styles/components/_welcome-banner.scss
@@ -26,6 +26,7 @@
 		color: $medium-grey;
 		font-size: $medium16;
 		font-family: 'Roboto', sans-serif;
+		font-weight: 300;
 		line-height: $large28;
 		margin: 24px 0 40px 0;
 
